--- a/plugin.video.doofree/resources/language/Japanese/strings.po
+++ b/plugin.video.doofree/resources/language/Japanese/strings.po
@@ -218,24 +218,24 @@ msgid "[B]SETTINGS[/B] : Providers"
 msgstr "[B]SETTINGS[/B] : プロバイダ"
 
 msgctxt "#32048"
-msgid "[B]DOOFREE[/B] : Downloads"
-msgstr "[B]DOOFREE[/B] : ダウンロード"
+msgid "[B]COVENANT[/B] : Downloads"
+msgstr "[B]COVENANT[/B] : ダウンロード"
 
 msgctxt "#32049"
-msgid "[B]DOOFREE[/B] : Viewtypes"
-msgstr "[B]DOOFREE[/B] : 表示タイプ"
+msgid "[B]COVENANT[/B] : Viewtypes"
+msgstr "[B]COVENANT[/B] : 表示タイプ"
 
 msgctxt "#32050"
-msgid "[B]DOOFREE[/B] : Clear providers..."
-msgstr "[B]DOOFREE[/B] : プロバイダリストを消去..."
+msgid "[B]COVENANT[/B] : Clear providers..."
+msgstr "[B]COVENANT[/B] : プロバイダリストを消去..."
 
 msgctxt "#32051"
-msgid "[B]DOOFREE[/B] : Clear metadata..."
-msgstr "[B]DOOFREE[/B] : metadataを消去..."
+msgid "[B]COVENANT[/B] : Clear metadata..."
+msgstr "[B]COVENANT[/B] : metadataを消去..."
 
 msgctxt "#32052"
-msgid "[B]DOOFREE[/B] : Clear cache..."
-msgstr "[B]DOOFREE[/B] : キャッシュを消去..."
+msgid "[B]COVENANT[/B] : Clear cache..."
+msgstr "[B]COVENANT[/B] : キャッシュを消去..."
 
 msgctxt "#32053"
 msgid "[I]Next Page[/I]"
