--- a/plugin.video.doofree/resources/language/Croatian/strings.po
+++ b/plugin.video.doofree/resources/language/Croatian/strings.po
@@ -1,20 +1,4 @@
 # Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
 # Anton G, 2016
 # Anton G, 2016
 # djkidy123, 2016
@@ -28,15 +12,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: DooFree\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-09-15 15:04+0200\n"
-"Last-Translator: gogo <trebelnik2@gmail.com>\n"
+"PO-Revision-Date: 2017-10-31 22:27+0100\n"
+"Last-Translator: gogo\n"
 "Language-Team: Croatian (http://www.transifex.com/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: hr\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Poedit 2.0.3\n"
+"X-Generator: Poedit 1.8.7.1\n"
 
 msgctxt "#32001"
 msgid "Movies"
@@ -712,11 +696,11 @@ msgstr "DEBRID-USLUGA"
 
 msgctxt "#32539"
 msgid "Configure Debrid Services in URLResolver Settings."
-msgstr "Podesi Debrid usluge u URLResolver postavkama."
+msgstr "Podesi Debrid usluge u postavkama URL razrješitelja."
 
 msgctxt "#32540"
 msgid "URLResolver Settings"
-msgstr "URLResolver postavke"
+msgstr "Postavke URL razrješitelja"
 
 msgctxt "#32541"
 msgid "Library"
@@ -833,3 +817,111 @@ msgstr "Zaštićena poveznica. Upišite vjerodajnice računa u postavkama."
 msgctxt "#32580"
 msgid "Films/TV Movies"
 msgstr "Filmovi/TV serije"
+
+msgctxt "#32581"
+msgid "Results Limit"
+msgstr "Ograničenje rezultata"
+
+msgctxt "#32582"
+msgid "Personal API keys provide quicker API responses."
+msgstr "Osobni API ključevi omogućuju API odgovor."
+
+msgctxt "#32583"
+msgid "Become a VIP member for many benefits at: https://fanart.tv/vip"
+msgstr "Postanite VIP član kako bi ostvarili mnoge pogodnosti na: https://fanart.tv/vip"
+
+msgctxt "#32584"
+msgid "Sort order for Trakt Watched Progress"
+msgstr "Razvrstaj poredak za Trakt napredak gledanja"
+
+msgctxt "#32585"
+msgid "Recently aired"
+msgstr "Nedavno emitirano"
+
+msgctxt "#32586"
+msgid "Recently watched"
+msgstr "Nedavno gledano"
+
+msgctxt "#32587"
+msgid "Show Extra Source Info"
+msgstr "Prikaži dodatne informacije izvora"
+
+msgctxt "#32588"
+msgid "Premium Source Identifier Color"
+msgstr "Boja identifikatora Premium izvora"
+
+msgctxt "#32589"
+msgid "Blue"
+msgstr "Plava"
+
+msgctxt "#32590"
+msgid "Red"
+msgstr "Crvena"
+
+msgctxt "#32591"
+msgid "Yellow"
+msgstr "Žuta"
+
+msgctxt "#32592"
+msgid "Deep Pink"
+msgstr "Ružičasta"
+
+msgctxt "#32593"
+msgid "Cyan"
+msgstr "Modra"
+
+msgctxt "#32594"
+msgid "Lawn Green"
+msgstr "Zelena"
+
+msgctxt "#32595"
+msgid "Gold"
+msgstr "Zlatna"
+
+msgctxt "#32596"
+msgid "Magenta"
+msgstr "Ljubičasta"
+
+msgctxt "#32597"
+msgid "Yellow Green"
+msgstr "Žuto zelena"
+
+msgctxt "#32598"
+msgid "No Color"
+msgstr "Bez boje"
+
+msgctxt "#32599"
+msgid "Getting genre information from Trakt"
+msgstr "Dobivanje informacija žanra sa trakta"
+
+msgctxt "#32600"
+msgid "Preparing sources"
+msgstr "Pripremanje izvora"
+
+msgctxt "#32601"
+msgid "Total"
+msgstr "Ukupno"
+
+msgctxt "#32602"
+msgid "Waiting for"
+msgstr "Čekam"
+
+msgctxt "#32603"
+msgid "New search..."
+msgstr "Nova pretraga..."
+
+msgctxt "#32604"
+msgid "[B]DOOFREE[/B] : Clear search history..."
+msgstr "[B]DOOFREE[/B] : Obriši povijest pretrage..."
+
+msgctxt "#32605"
+msgid "Click to clear search history"
+msgstr "Klikni za brisanje povijesti pretrage"
+
+msgctxt "#32606"
+msgid "Prem"
+msgstr "Prem"
+
+msgctxt "#32607"
+msgid "Normal"
+msgstr "Normalno"
