--- a/plugin.video.doofree/resources/language/Hebrew/strings.po
+++ b/plugin.video.doofree/resources/language/Hebrew/strings.po
@@ -1,13 +1,6 @@
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
-# Translators:
+# Addon Name: Covenant
+# Addon id: plugin.video.covenant
+# Addon Provider: Covenant
 # Translators:
 # Translators:
 # Translators:
@@ -20,22 +13,24 @@
 # lambda81, 2015
 # lambda81, 2016
 # lidor malich, 2015
-# Noam Guterman, 2017
 # SagaMi, 2016
 # Yaron Shahrabani, 2016
-# ‫לידור מליח‬‎, 2016
+# ‫לידור מליח‬‎, 2016י
+# Noam Guterman, 2017
+# A. Dambledore, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: DooFree\n"
+"Project-Id-Version: Covenant\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2017-05-30 09:11+0000\n"
-"Last-Translator: Viper2k4\n"
-"Language-Team: Hebrew (http://www.transifex.com/)\n"
+"PO-Revision-Date: 2017-10-29 07:49+0200\n"
+"Last-Translator: A. Dambledore\n"
+"Language-Team: Eng2Heb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: he\n"
+"Language: he_IL\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 2.0.4\n"
 
 msgctxt "#32001"
 msgid "Movies"
@@ -79,7 +74,7 @@ msgstr "חיפוש"
 
 msgctxt "#32011"
 msgid "Genres"
-msgstr "ז'אנר"
+msgstr "סגנונות"
 
 msgctxt "#32012"
 msgid "Year"
@@ -87,7 +82,7 @@ msgstr "שנה"
 
 msgctxt "#32013"
 msgid "People"
-msgstr "שחקנים"
+msgstr "אנשים"
 
 msgctxt "#32014"
 msgid "Languages"
@@ -95,7 +90,7 @@ msgstr "שפות"
 
 msgctxt "#32015"
 msgid "Certificates"
-msgstr "סינון גיל"
+msgstr "תעודות"
 
 msgctxt "#32016"
 msgid "Networks"
@@ -103,15 +98,15 @@ msgstr "רשתות"
 
 msgctxt "#32017"
 msgid "People Watching"
-msgstr "אנשים צופים כעת"
+msgstr "אנשים צופים"
 
 msgctxt "#32018"
 msgid "Most Popular"
-msgstr "פופולרי"
+msgstr "הכי פופולרי"
 
 msgctxt "#32019"
 msgid "Most Voted"
-msgstr "דירוג מצביעים"
+msgstr "הוצבע הכי הרבה"
 
 msgctxt "#32020"
 msgid "Box Office"
@@ -123,11 +118,11 @@ msgstr "זוכי אוסקר"
 
 msgctxt "#32022"
 msgid "In Theaters"
-msgstr "בקולנוע"
+msgstr "עכשיו בקולנוע"
 
 msgctxt "#32023"
 msgid "Highly Rated"
-msgstr "דירוג גבוה"
+msgstr "מדורגים גבוה"
 
 msgctxt "#32024"
 msgid "Airing today"
@@ -143,7 +138,7 @@ msgstr "סדרות חדשות"
 
 msgctxt "#32027"
 msgid "TV Calendar"
-msgstr "לוח שידורי סדרות"
+msgstr "לוח שידורים"
 
 msgctxt "#32028"
 msgid "People Search"
@@ -151,19 +146,19 @@ msgstr "חיפוש שחקנים"
 
 msgctxt "#32029"
 msgid "People (Movies)"
-msgstr "שחקני סרטים"
+msgstr "שחקנים(סרטים)"
 
 msgctxt "#32030"
 msgid "People (TV)"
-msgstr "שחקני סדרות"
+msgstr "אנשים (טלוויזיה)"
 
 msgctxt "#32031"
 msgid "Discover"
-msgstr "סייר"
+msgstr "גלה"
 
 msgctxt "#32032"
 msgid "Collection"
-msgstr "אוספים"
+msgstr "אוסף"
 
 msgctxt "#32033"
 msgid "Watchlist"
@@ -171,15 +166,15 @@ msgstr "רשימת צפייה"
 
 msgctxt "#32034"
 msgid "IMDb"
-msgstr "IMDB"
+msgstr "IMDb"
 
 msgctxt "#32035"
 msgid "Featured"
-msgstr "מומלצים"
+msgstr "מוצגים"
 
 msgctxt "#32036"
 msgid "History"
-msgstr "היסטוריה"
+msgstr "הסטוריה"
 
 msgctxt "#32037"
 msgid "Progress"
@@ -203,51 +198,51 @@ msgstr "רשימת פרקים"
 
 msgctxt "#32042"
 msgid "No Trakt or IMDb account found."
-msgstr "לא נמצא חשבון IMDB או TRAKT"
+msgstr "לא נמצא חשבון IMDB או טראקט."
 
 msgctxt "#32043"
 msgid "[B]SETTINGS[/B] : General"
-msgstr ": כללי [B]הגדרות[/B] "
+msgstr "[B]הגדרות[/B] : כללי"
 
 msgctxt "#32044"
 msgid "[B]SETTINGS[/B] : Accounts"
-msgstr ": חשבונות [B]הגדרות[/B] "
+msgstr "[B]הגדרות[/B] : חשבונות"
 
 msgctxt "#32045"
 msgid "[B]SETTINGS[/B] : Playback"
-msgstr ": ניגון [B]הגדרות[/B] "
+msgstr "[B]הגדרות[/B] : ניגון"
 
 msgctxt "#32046"
 msgid "[B]SETTINGS[/B] : Subtitles"
-msgstr ": כתוביות [B]הגדרות[/B] "
+msgstr "[B]הגדרות[/B] : כתוביות"
 
 msgctxt "#32047"
 msgid "[B]SETTINGS[/B] : Providers"
-msgstr ": שרתים [B]הגדרות[/B] "
+msgstr "[B]הגדרות[/B] : ספקים"
 
 msgctxt "#32048"
-msgid "[B]DOOFREE[/B] : Downloads"
-msgstr ": הורדות [B]DOOFREE[/B] "
+msgid "[B]COVENANT[/B] : Downloads"
+msgstr "[B]קובננט[/B] : הורדות"
 
 msgctxt "#32049"
-msgid "[B]DOOFREE[/B] : Viewtypes"
-msgstr ": סוג רשימה [B]DOOFREE[/B] "
+msgid "[B]COVENANT[/B] : Viewtypes"
+msgstr "[B]קובננט[/B] : סוגים לצפייה"
 
 msgctxt "#32050"
-msgid "[B]DOOFREE[/B] : Clear providers..."
-msgstr ": ניקוי שרתים [B]DOOFREE[/B] "
+msgid "[B]COVENANT[/B] : Clear providers..."
+msgstr "[B]קובננט[/B] : ניקוי ספקים..."
 
 msgctxt "#32051"
-msgid "[B]DOOFREE[/B] : Clear metadata..."
-msgstr ": ניקוי מטאדאטה[B]DOOFREE[/B] "
+msgid "[B]COVENANT[/B] : Clear metadata..."
+msgstr "[B]קובננט[/B] : ניקוי מטא-דאטה..."
 
 msgctxt "#32052"
-msgid "[B]DOOFREE[/B] : Clear cache..."
-msgstr ": ניקוי קאש [B]DOOFREE[/B] "
+msgid "[B]COVENANT[/B] : Clear cache..."
+msgstr "[B]קובננט[/B] : ניקוי מטמון..."
 
 msgctxt "#32053"
 msgid "[I]Next Page[/I]"
-msgstr "דף הבא"
+msgstr "[I]לעמוד הבא[/I]"
 
 msgctxt "#32054"
 msgid "Seasons"
@@ -263,19 +258,18 @@ msgstr "האם אתה בטוח?"
 
 msgctxt "#32057"
 msgid "Process Complete"
-msgstr "תהליך הושלם"
+msgstr "הפעולה הושלמה"
 
 msgctxt "#32058"
 msgid "This will slow down things until they are re-cached!"
-msgstr "פעולה זו תאט את הפעילות עד לבניית מטמון הכתובות מחדש"
+msgstr "פעולה זו תאט את הפעילות עד לבניית מטמון הכתובות מחדש!"
 
 msgctxt "#32059"
 msgid "CLICK HERE TO SAVE VIEW"
-msgstr "תקליק כאן לשמירת התצוגה"
+msgstr "לחץ כאן לשמירת התצוגה"
 
 msgctxt "#32060"
-msgid ""
-"January|February|March|April|May|June|July|August|September|October|November|December"
+msgid "January|February|March|April|May|June|July|August|September|October|November|December"
 msgstr "ינואר|פברואר|מרץ|אפריל|מאי|יוני|יולי|אוגוסט|ספטמבר|אוקטובר| נובמבר|דצמבר"
 
 msgctxt "#32061"
@@ -288,7 +282,7 @@ msgstr "[B]%s[/B] : %s"
 
 msgctxt "#32063"
 msgid "Play using..."
-msgstr "נגן באמצעות"
+msgstr "נגן באמצעות..."
 
 msgctxt "#32064"
 msgid "Auto Play"
@@ -299,24 +293,24 @@ msgid "Queue item"
 msgstr "הוספה לתור"
 
 msgctxt "#32066"
-msgid "Watched in DooFree"
-msgstr "נצפה באקסודוס"
+msgid "Watched in Covenant"
+msgstr "נצפה בקובננט"
 
 msgctxt "#32067"
-msgid "Unwatched in DooFree"
-msgstr "לא נצפה באקסודוס"
+msgid "Unwatched in Covenant"
+msgstr "לא נצפה בקובננט"
 
 msgctxt "#32068"
 msgid "Watched in Trakt"
-msgstr "נצפה בTrakt"
+msgstr "נצפה בטראקט"
 
 msgctxt "#32069"
 msgid "Unwatched in Trakt"
-msgstr "לא נצפה בTrakt"
+msgstr "לא נצפה בטראקט"
 
 msgctxt "#32070"
 msgid "Trakt Manager"
-msgstr "מנהל Trakt"
+msgstr "מנהל טראקט"
 
 msgctxt "#32071"
 msgid "Browse Series"
@@ -324,11 +318,11 @@ msgstr "עיון בסדרות"
 
 msgctxt "#32072"
 msgid "Refresh"
-msgstr "רענון "
+msgstr "רענן"
 
 msgctxt "#32073"
 msgid "[B]TRAKT[/B] : Authorize"
-msgstr "[B]TRAKT[/B]: אימות"
+msgstr "[B]טראקט[/B] : הזדהות"
 
 msgctxt "#32074"
 msgid "[B]HELP[/B]"
@@ -336,11 +330,11 @@ msgstr "[B]עזרה[/B]"
 
 msgctxt "#32301"
 msgid "Enabled"
-msgstr "מאופשר "
+msgstr "מאופשר"
 
 msgctxt "#32302"
 msgid "Disabled"
-msgstr "לא מאופשר "
+msgstr "מנוטרל"
 
 msgctxt "#32303"
 msgid "User"
@@ -348,27 +342,27 @@ msgstr "משתמש "
 
 msgctxt "#32304"
 msgid "Email"
-msgstr "Email"
+msgstr "אי-מייל"
 
 msgctxt "#32305"
 msgid "ID"
-msgstr "ID"
+msgstr "מזהה"
 
 msgctxt "#32306"
 msgid "Authorization..."
-msgstr "אימות..."
+msgstr "הזדהות..."
 
 msgctxt "#32307"
 msgid "Password"
-msgstr "סיסמה "
+msgstr "סיסמה"
 
 msgctxt "#32308"
 msgid "PIN"
-msgstr "PIN"
+msgstr "קוד PIN"
 
 msgctxt "#32309"
 msgid "API"
-msgstr " API"
+msgstr "מפתח API"
 
 msgctxt "#32310"
 msgid "General"
@@ -376,11 +370,11 @@ msgstr "כללי"
 
 msgctxt "#32311"
 msgid "Appearance"
-msgstr "מראה"
+msgstr "הצג"
 
 msgctxt "#32312"
 msgid "Providers Timeout"
-msgstr "זמן חיפוש שרתים"
+msgstr "זמן קצוב לספקים"
 
 msgctxt "#32313"
 msgid "Indicators"
@@ -392,7 +386,7 @@ msgstr "מקומי"
 
 msgctxt "#32315"
 msgid "Trakt"
-msgstr "Trakt"
+msgstr "טראקט"
 
 msgctxt "#32316"
 msgid "Info Language"
@@ -404,7 +398,7 @@ msgstr "שטח עונות בסדרות"
 
 msgctxt "#32318"
 msgid "Enable Fanart"
-msgstr "אפשר Fanart"
+msgstr "אפשר פאנארט"
 
 msgctxt "#32319"
 msgid "Menu"
@@ -416,11 +410,11 @@ msgstr "סרטים חדשים"
 
 msgctxt "#32321"
 msgid "Featured"
-msgstr "מוצגים עכשיו"
+msgstr "מוצגים"
 
 msgctxt "#32322"
 msgid "People Watching"
-msgstr "אנשים צופים כעת"
+msgstr "אנשים צופים"
 
 msgctxt "#32323"
 msgid "Most Popular"
@@ -440,11 +434,11 @@ msgstr "פרקים"
 
 msgctxt "#32327"
 msgid "Trakt Progress"
-msgstr "התקדמות סדרות Trakt"
+msgstr "התקדמות טראקט"
 
 msgctxt "#32328"
 msgid "Trakt Episodes"
-msgstr "פרקים Trakt "
+msgstr "פרקים בטראקט"
 
 msgctxt "#32329"
 msgid "My Lists"
@@ -452,11 +446,11 @@ msgstr "הרשימות שלי"
 
 msgctxt "#32330"
 msgid "Playback"
-msgstr "ניגון"
+msgstr "שמע"
 
 msgctxt "#32331"
 msgid "Default action"
-msgstr "ברירת מחדל"
+msgstr "פעולת ברירת מחדל"
 
 msgctxt "#32332"
 msgid "Dialog"
@@ -464,7 +458,7 @@ msgstr "דיאלוג"
 
 msgctxt "#32333"
 msgid "Directory"
-msgstr "ספריה"
+msgstr "תיקייה"
 
 msgctxt "#32334"
 msgid "Auto Play"
@@ -472,19 +466,19 @@ msgstr "ניגון אוטומטי"
 
 msgctxt "#32335"
 msgid "Progress Dialog"
-msgstr "דיאלוג התקדמות"
+msgstr "חלונית התקדמות"
 
 msgctxt "#32336"
 msgid "Foreground"
-msgstr "קדמי"
+msgstr "חזית"
 
 msgctxt "#32337"
 msgid "Background"
-msgstr "ברקע"
+msgstr "‎ברקע"
 
 msgctxt "#32338"
 msgid "File Hosting Filters"
-msgstr "סינון שרתים"
+msgstr "מסנני אירוח קבצים"
 
 msgctxt "#32339"
 msgid "Max Quality"
@@ -500,7 +494,7 @@ msgstr "שרתים עם קוד אימות"
 
 msgctxt "#32342"
 msgid "Sort by Provider"
-msgstr "סידור לפי שרתים"
+msgstr "מיין לפי ספק"
 
 msgctxt "#32343"
 msgid "When playback starts..."
@@ -516,7 +510,7 @@ msgstr "שרתים"
 
 msgctxt "#32346"
 msgid "Accounts"
-msgstr "חשבונות"
+msgstr "חשבון"
 
 msgctxt "#32347"
 msgid "Downloads"
@@ -536,11 +530,11 @@ msgstr "סדרות"
 
 msgctxt "#32351"
 msgid "Downloading features are disabled by default."
-msgstr "תכונות ההורדה מנוטרלות כבררת מחדל."
+msgstr "הורדת תכונות מבוטלת לפי ברירת מחדל."
 
 msgctxt "#32352"
 msgid "Set up your download folders in order to enable them."
-msgstr "הגדרת תיקיות ההורדה שלך על מנת לאפשר אותם."
+msgstr "הגדר את תיקיות ההורדה שלך על מנת לאפשר אותם."
 
 msgctxt "#32353"
 msgid "Subtitles"
@@ -556,39 +550,51 @@ msgstr "המר כתוביות לפורמט UTF-8"
 
 msgctxt "#32356"
 msgid "Primary Language"
-msgstr "שפה ראשית"
+msgstr "שפה ראשונה"
 
 msgctxt "#32357"
 msgid "Secondary Language"
-msgstr "שפה משנית"
+msgstr "שפה שנייה"
 
 msgctxt "#32358"
 msgid "Subtitles could be unavailable or out of sync."
-msgstr "יתכן שהכתוביות לא יהיו זמינות או שלא יהיו מסונכרנות."
+msgstr "הכתוביות יכולות להיות לא תואמות או לא מסונכרנות."
 
 msgctxt "#32359"
 msgid "In that case use your own subtitles."
-msgstr "במקרה שכזה מוטב להשתמש בכתוביות שסופקו על ידך."
+msgstr "במקרה זה השתמש בכתוביות שלך."
 
 msgctxt "#32360"
 msgid "Providers Language"
-msgstr "שפת שרתים"
+msgstr "שפת ספקים"
+
+msgctxt "#32363"
+msgid "HEVC"
+msgstr "HEVC"
+
+msgctxt "#32372"
+msgid "When playback ends..."
+msgstr "כאשר הניגון מסתיים..."
+
+msgctxt "#32373"
+msgid "Force container refresh"
+msgstr "אלץ רענון התכולה"
 
 msgctxt "#32401"
 msgid "No stream available"
 msgstr "אין מקור להזרמה"
 
 msgctxt "#32402"
-msgid "Playback outside DooFree is not allowed"
-msgstr "הניגון מחוץ ל־DooFree אינו מורשה"
+msgid "Playback outside Covenant is not allowed"
+msgstr "ניגון מחוץ לקובננט אסור"
 
 msgctxt "#32403"
 msgid "Download"
-msgstr "הורדה"
+msgstr "הורד"
 
 msgctxt "#32404"
 msgid "Time elapsed: %s seconds"
-msgstr "זמן שעבר %s שניות"
+msgstr "זמן שעבר: %s שניות"
 
 msgctxt "#32405"
 msgid "%s seconds"
@@ -596,89 +602,336 @@ msgstr "%s שניות"
 
 msgctxt "#32406"
 msgid "Remaining providers: %s"
-msgstr "מקורות שנותרו : %s"
+msgstr "ספקים שנותרו: %s"
 
 msgctxt "#32407"
 msgid "Are you sure?"
-msgstr "האם אתה בטוח?"
+msgstr "האם להחיל את השינויים?"
 
 msgctxt "#32408"
 msgid "Process Complete"
-msgstr "תהליך הושלם"
+msgstr "הפעולה הושלמה"
 
 msgctxt "#32501"
 msgid "Start from beginning"
-msgstr "התחל מחדש"
+msgstr "התחל מההתחלה"
 
 msgctxt "#32502"
 msgid "Resume from %s"
-msgstr "המשך מ %s"
+msgstr "המשך מ%s"
 
 msgctxt "#32503"
 msgid "Resume"
-msgstr "המשך"
+msgstr "תקציר"
 
 msgctxt "#32511"
 msgid "An account already exists."
-msgstr "החשבון קיים כבר"
+msgstr "משתמש קיים."
 
 msgctxt "#32512"
 msgid "Do you want to reset?"
-msgstr "האם לאפס?"
+msgstr "האם ברצונך לאפס?"
 
 msgctxt "#32513"
 msgid "1) Visit : [COLOR skyblue]%s[/COLOR]"
-msgstr " [COLOR skyblue]%s[/COLOR]1) בקר :"
+msgstr "בקר: [COLOR skyblue]%s[/COLOR]1)"
 
 msgctxt "#32514"
 msgid "2) When prompted enter : [COLOR skyblue]%s[/COLOR]"
-msgstr "[COLOR skyblue]%s[/COLOR] 2) לאחר שנכנסת יש להזין  : "
+msgstr "2) כאשר תתבקש תזין: [COLOR skyblue]%s[/COLOR]"
 
 msgctxt "#32515"
 msgid "Trakt Manager"
-msgstr "מנהל Trakt"
+msgstr "מנהל טראקט"
 
 msgctxt "#32516"
 msgid "Add to [B]Collection[/B]"
-msgstr "הוספה ל [B]אוספים[/B]"
+msgstr "הוספה ל[B]אוספים[/B]"
 
 msgctxt "#32517"
 msgid "Remove from [B]Collection[/B]"
-msgstr "הסרה מ [B]אוספים[/B]"
+msgstr "הסרה מ[B]אוספים[/B]"
 
 msgctxt "#32518"
 msgid "Add to [B]Watchlist[/B]"
-msgstr "הוספה ל [B]רשימת צפייה[/B]"
+msgstr "הוספה ל[B]רשימת צפייה[/B]"
 
 msgctxt "#32519"
 msgid "Remove from [B]Watchlist[/B]"
-msgstr "הסרה מ [B]רשימת צפייה[/B]"
+msgstr "הסרה מ[B]רשימת צפייה[/B]"
 
 msgctxt "#32520"
 msgid "Add to [B]new List[/B]"
-msgstr "הוסף ל  [B]רשימה חדשה[/B]"
+msgstr "הוסף ל[B]רשימה חדשה[/B]"
 
 msgctxt "#32521"
 msgid "Add to [B]%s[/B]"
-msgstr "הוסף ל [B]%s[/B]"
+msgstr "הוסף ל[B]%s[/B]"
 
 msgctxt "#32522"
 msgid "Remove from [B]%s[/B]"
-msgstr "הסר מ [B]%s[/B]"
+msgstr "הסר מ[B]%s[/B]"
 
 msgctxt "#32531"
 msgid "An account already exists."
-msgstr "חשבון כבר קיים."
+msgstr "משתמש קיים."
 
 msgctxt "#32532"
 msgid "Do you want to reset?"
-msgstr "לבצע איפוס?"
+msgstr "האם ברצונך לאפס?"
 
 msgctxt "#32533"
 msgid "1) Visit : [COLOR skyblue]%s[/COLOR]"
-msgstr "1) בקר:  [COLOR skyblue]%s[/COLOR]"
+msgstr "בקר: [COLOR skyblue]%s[/COLOR]1)"
 
 msgctxt "#32534"
 msgid "2) When prompted enter : [COLOR skyblue]%s[/COLOR]"
-msgstr "2)כאשר תתבקש להזין:  [COLOR skyblue]%s[/COLOR]"
+msgstr "2) כאשר תתבקש תזין: [COLOR skyblue]%s[/COLOR]"
 
+msgctxt "#32535"
+msgid "Play Random"
+msgstr "נגן אקראי"
+
+msgctxt "#32536"
+msgid "Playing"
+msgstr "מנגן"
+
+msgctxt "#32537"
+msgid "Nothing found to play"
+msgstr "אין מה לנגן"
+
+msgctxt "#32538"
+msgid "DEBRID-SERVICE"
+msgstr "שירות ריל-דבריד"
+
+msgctxt "#32539"
+msgid "Configure Debrid Services in URLResolver Settings."
+msgstr "קבע את תצורת שירותי ריל-דבריד בהגדרות URLResolver."
+
+msgctxt "#32540"
+msgid "URLResolver Settings"
+msgstr "הגדרות URLResolver"
+
+msgctxt "#32541"
+msgid "Library"
+msgstr "ספרייה"
+
+msgctxt "#32542"
+msgid "Covenant folders will be imported to library if they are added to media sources."
+msgstr "התיקיות של קובננט ייובאו לספריה אם הן יתווספו למקורות מדיה."
+
+msgctxt "#32543"
+msgid "Movies"
+msgstr "סרטים"
+
+msgctxt "#32544"
+msgid "TV"
+msgstr "סדרות"
+
+msgctxt "#32545"
+msgid "Auto update TV Shows"
+msgstr "עדכון אוטומטי של סדרות"
+
+msgctxt "#32546"
+msgid "Show notifications during update"
+msgstr "הצג הודעות במהלך העדכון"
+
+msgctxt "#32547"
+msgid "Update library after adding content"
+msgstr "עדכון ספריה לאחר הוספת תוכן"
+
+msgctxt "#32548"
+msgid "Avoid creating duplicate content"
+msgstr "הימנע מיצירת תוכן כפול"
+
+msgctxt "#32549"
+msgid "Check movie before adding it"
+msgstr "בדוק סרטים לפני הוספה"
+
+msgctxt "#32550"
+msgid "Check first episode of season before adding it"
+msgstr "בדוק פרק ראשון של עונה לפני הוספה"
+
+msgctxt "#32551"
+msgid "Add to Library"
+msgstr "הוסף לספרייה"
+
+msgctxt "#32552"
+msgid "Adding to library..."
+msgstr "מוסיף לספרייה..."
+
+msgctxt "#32553"
+msgid "Updating TV shows..."
+msgstr "מעדכן סדרות..."
+
+msgctxt "#32554"
+msgid "Process Complete"
+msgstr "הפעולה הושלמה"
+
+msgctxt "#32555"
+msgid "Are you sure?"
+msgstr "האם להחיל את השינויים?"
+
+msgctxt "#32556"
+msgid "[B]COVENANT[/B] : Library"
+msgstr "[B]קובננט[/B] : ספרייה"
+
+msgctxt "#32557"
+msgid "[B]LIBRARY[/B] : Settings"
+msgstr "[B]ספריה[/B]: הגדרות"
+
+msgctxt "#32558"
+msgid "[B]COVENANT[/B] : Update library..."
+msgstr "[B]קובננט[/B] : עדכון ספרייה..."
+
+msgctxt "#32559"
+msgid "[B]COVENANT[/B] : Movie folder..."
+msgstr "[B]קובננט[/B] : תיקיית סרטים..."
+
+msgctxt "#32560"
+msgid "[B]COVENANT[/B] : TV folder..."
+msgstr "[B]קובננט[/B] : תיקיית סדרות..."
+
+msgctxt "#32561"
+msgid "[B]TRAKT[/B] : Import Collection..."
+msgstr "B]טראקט[/B] : ייבוא אוסף..."
+
+msgctxt "#32562"
+msgid "[B]TRAKT[/B] : Import Watchlist..."
+msgstr "B]טראקט[/B] : ייבוא רשימת צפייה."
+
+msgctxt "#32563"
+msgid "[B]TRAKT[/B] : Import TV Collection..."
+msgstr "[B]טראקט[/B]: ייבוא אוסף סדרות..."
+
+msgctxt "#32564"
+msgid "[B]TRAKT[/B] : Import TV Watchlist..."
+msgstr "[B]טראקט[/B]: ייבוא רשימת צפייה בסדרות."
+
+msgctxt "#32565"
+msgid "Include episodes with unknown air dates"
+msgstr "כלול פרקים עם תאריכי שידור לא ידועים"
+
+msgctxt "#32570"
+msgid "Show unaired seasons/episodes"
+msgstr "הצג עונות ופרקים שלא שודרו"
+
+msgctxt "#32571"
+msgid "Hide movies in cinema"
+msgstr "הסתר סרטים בקולנוע"
+
+msgctxt "#32572"
+msgid "Protected Link. Please enter account credentials in the settings."
+msgstr "קישור מוגן. אנא הזינו את פרטי ההתחברות בהגדרות."
+
+msgctxt "#32580"
+msgid "Films/TV Movies"
+msgstr "סרטי טלוויזיה/סרטים"
+
+msgctxt "#32581"
+msgid "Results Limit"
+msgstr "מגבלת תוצאות"
+
+msgctxt "#32582"
+msgid "Personal API keys provide quicker API responses."
+msgstr "מפתח API מותאם אישי מאפשר קבלת מקורות נוספים ומהיר יותר."
+
+msgctxt "#32583"
+msgid "Become a VIP member for many benefits at: https://fanart.tv/vip"
+msgstr "כחבר VIP תזכה להטבות רבות ב- https://fanart.tv/vip"
+
+msgctxt "#32584"
+msgid "Sort order for Trakt Watched Progress"
+msgstr "מיון סדר עבור תהליך רשימת נצפה בטראקט"
+
+msgctxt "#32585"
+msgid "Recently aired"
+msgstr "שודר לאחרונה"
+
+msgctxt "#32586"
+msgid "Recently watched"
+msgstr "נצפה לאחרונה"
+
+msgctxt "#32587"
+msgid "Show Extra Source Info"
+msgstr "הצג פרטי מקור נוסף"
+
+msgctxt "#32588"
+msgid "Premium Source Identifier Color"
+msgstr "מזהה צבע של מקור פרמיום"
+
+msgctxt "#32589"
+msgid "Blue"
+msgstr "כחול"
+
+msgctxt "#32590"
+msgid "Red"
+msgstr "אדום"
+
+msgctxt "#32591"
+msgid "Yellow"
+msgstr "צהוב"
+
+msgctxt "#32592"
+msgid "Deep Pink"
+msgstr "ורוד עמוק"
+
+msgctxt "#32593"
+msgid "Cyan"
+msgstr "ציאן"
+
+msgctxt "#32594"
+msgid "Lawn Green"
+msgstr "ירוק דשא"
+
+msgctxt "#32595"
+msgid "Gold"
+msgstr "זהב"
+
+msgctxt "#32596"
+msgid "Magenta"
+msgstr "מג\\'נטה"
+
+msgctxt "#32597"
+msgid "Yellow Green"
+msgstr "צהוב ירוק"
+
+msgctxt "#32598"
+msgid "No Color"
+msgstr "ללא צבע"
+
+msgctxt "#32599"
+msgid "Getting genre information from Trakt"
+msgstr "מקבל מידע על סגנון מטראקט"
+
+msgctxt "#32600"
+msgid "Preparing sources"
+msgstr "מכין מקורות"
+
+msgctxt "#32601"
+msgid "Total"
+msgstr "סך הכל"
+
+msgctxt "#32602"
+msgid "Waiting for"
+msgstr "ממתין ל-"
+
+msgctxt "#32603"
+msgid "New search..."
+msgstr "חיפוש חדש..."
+
+msgctxt "#32604"
+msgid "[B]COVENANT[/B] : Clear search history..."
+msgstr "[B]קובננט[/B] : ניקוי היסטוריית חיפוש..."
+
+msgctxt "#32605"
+msgid "Click to clear search history"
+msgstr "לחץ כדי לנקות את היסטוריית החיפוש"
+
+msgctxt "#32606"
+msgid "Prem"
+msgstr "פרמיום"
+
+msgctxt "#32607"
+msgid "Normal"
+msgstr "נורמלי"
