--- a/plugin.video.doofree/resources/language/Italian/strings.po
+++ b/plugin.video.doofree/resources/language/Italian/strings.po
@@ -184,7 +184,7 @@ msgstr "Avanzamento"
 
 msgctxt "#32038"
 msgid "Episodes"
-msgstr "Epsiodi"
+msgstr "Episodi"
 
 msgctxt "#32039"
 msgid "Movie Lists"
@@ -204,23 +204,23 @@ msgstr "Non è stato trovato alcun account Trakt o IMDb."
 
 msgctxt "#32043"
 msgid "[B]SETTINGS[/B] : General"
-msgstr "[B]SETTINGS[/B] : Generale"
+msgstr "[B]IMPOSTAZIONI[/B] : Generale"
 
 msgctxt "#32044"
 msgid "[B]SETTINGS[/B] : Accounts"
-msgstr "[B]SETTINGS[/B] : Account"
+msgstr "[B]IMPOSTAZIONI[/B] : Account"
 
 msgctxt "#32045"
 msgid "[B]SETTINGS[/B] : Playback"
-msgstr "[B]SETTINGS[/B] : Riproduzione"
+msgstr "[B]IMPOSTAZIONI[/B] : Riproduzione"
 
 msgctxt "#32046"
 msgid "[B]SETTINGS[/B] : Subtitles"
-msgstr "[B]SETTINGS[/B] : Sottotitoli"
+msgstr "[B]IMPOSTAZIONI[/B] : Sottotitoli"
 
 msgctxt "#32047"
 msgid "[B]SETTINGS[/B] : Providers"
-msgstr "[B]SETTINGS[/B] : Provider"
+msgstr "[B]IMPOSTAZIONI[/B] : Provider"
 
 msgctxt "#32048"
 msgid "[B]DOOFREE[/B] : Downloads"
@@ -333,7 +333,7 @@ msgstr "[B]HELP[/B]"
 
 msgctxt "#32301"
 msgid "Enabled"
-msgstr "Abiliato"
+msgstr "Abilitato"
 
 msgctxt "#32302"
 msgid "Disabled"
@@ -703,3 +703,230 @@ msgctxt "#32540"
 msgid "URLResolver Settings"
 msgstr "Impostazioni URLResolver"
 
+msgctxt "#32541"
+msgid "Library"
+msgstr "Libreria"
+
+msgctxt "#32542"
+msgid "DooFree folders will be imported to library if they are added to media sources."
+msgstr "Le cartelle di DooFree verranno importate nella libreria se verranno aggiunte su Sorgenti Media."
+
+msgctxt "#32543"
+msgid "Movies"
+msgstr "Film"
+
+msgctxt "#32544"
+msgid "TV"
+msgstr "TV"
+
+msgctxt "#32545"
+msgid "Auto update TV Shows"
+msgstr "Aggiornamento automatico Serie TV"
+
+msgctxt "#32546"
+msgid "Show notifications during update"
+msgstr "Visualizza notifiche durante l'aggiornamento"
+
+msgctxt "#32547"
+msgid "Update library after adding content"
+msgstr "Aggiorna libreria dopo l'aggiunta del contenuto"
+
+msgctxt "#32548"
+msgid "Avoid creating duplicate content"
+msgstr "Evita la creazione di contenuti duplicati"
+
+msgctxt "#32549"
+msgid "Check movie before adding it"
+msgstr "Controlla film prima di aggiungerlo"
+
+msgctxt "#32550"
+msgid "Check first episode of season before adding it"
+msgstr "Controlla primo epidodio della stagione prima di aggiungerlo"
+
+msgctxt "#32551"
+msgid "Add to Library"
+msgstr "Aggiungi a Libreria"
+
+msgctxt "#32552"
+msgid "Adding to library..."
+msgstr "Sto aggiungendo alla libreria..."
+
+msgctxt "#32553"
+msgid "Updating TV shows..."
+msgstr "Sto aggiornando le Serie TV..."
+
+msgctxt "#32554"
+msgid "Process Complete"
+msgstr "Processo completato"
+
+msgctxt "#32555"
+msgid "Are you sure?"
+msgstr "Sei sicuro?"
+
+msgctxt "#32556"
+msgid "[B]DOOFREE[/B] : Library"
+msgstr "[B]DOOFREE[/B] : Libreria"
+
+msgctxt "#32557"
+msgid "[B]LIBRARY[/B] : Settings"
+msgstr "[B]LIBRERIA[/B] : Impostazioni"
+
+msgctxt "#32558"
+msgid "[B]DOOFREE[/B] : Update library..."
+msgstr "[B]DOOFREE[/B] : Aggiorna libreria..."
+
+msgctxt "#32559"
+msgid "[B]DOOFREE[/B] : Movie folder..."
+msgstr "[B]DOOFREE[/B] : Cartella film..."
+
+msgctxt "#32560"
+msgid "[B]DOOFREE[/B] : TV folder..."
+msgstr "[B]DOOFREE[/B] : Cartella Serie TV..."
+
+msgctxt "#32561"
+msgid "[B]TRAKT[/B] : Import Collection..."
+msgstr "[B]TRAKT[/B] : Importa Collezione..."
+
+msgctxt "#32562"
+msgid "[B]TRAKT[/B] : Import Watchlist..."
+msgstr "[B]TRAKT[/B] : Importa Watchlist..."
+
+msgctxt "#32563"
+msgid "[B]TRAKT[/B] : Import TV Collection..."
+msgstr "[B]TRAKT[/B] : Importa Collezione TV"
+
+msgctxt "#32564"
+msgid "[B]TRAKT[/B] : Import TV Watchlist..."
+msgstr "[B]TRAKT[/B] : Importa Watchlist TV..."
+
+msgctxt "#32565"
+msgid "Include episodes with unknown air dates"
+msgstr "Includi episodi con data di trasmissione sconosciuta"
+
+msgctxt "#32570"
+msgid "Show unaired seasons/episodes"
+msgstr "Visualizza stagioni/episodi non tramessi"
+
+msgctxt "#32571"
+msgid "Hide movies in cinema"
+msgstr "Nascondi film nei cinema"
+
+msgctxt "#32372"
+msgid "When playback ends..."
+msgstr "Quando la riproduzione finisce..."
+
+msgctxt "#32373"
+msgid "Force container refresh"
+msgstr "Forza aggiornamento container"
+
+msgctxt "#32580"
+msgid "Films/TV Movies"
+msgstr "Film/Film TV"
+
+msgctxt "#32581"
+msgid "Results Limit"
+msgstr "Limite risultati"
+
+msgctxt "#32582"
+msgid "Personal API keys provide quicker API responses."
+msgstr "Le chiavi API personali forniscono risultati più rapidi."
+
+msgctxt "#32583"
+msgid "Become a VIP member for many benefits at: https://fanart.tv/vip"
+msgstr "Diventa un utente VIP per ottenere maggiori benefici su: https://fanart.tv/vip"
+
+msgctxt "#32584"
+msgid "Sort order for Trakt Watched Progress"
+msgstr "Ordina secondo l'avanzamento Trakt Watched"
+
+msgctxt "#32585"
+msgid "Recently aired"
+msgstr "Trasmessi di recente"
+
+msgctxt "#32586"
+msgid "Recently watched"
+msgstr "Visti di recente"
+
+msgctxt "#32587"
+msgid "Show Extra Source Info"
+msgstr "Mostra informazioni da fonti aggiuntive"
+
+msgctxt "#32588"
+msgid "Premium Source Identifier Color"
+msgstr "Colore identificativo fonti Premium"
+
+msgctxt "#32589"
+msgid "Blue"
+msgstr "Blu"
+
+msgctxt "#32590"
+msgid "Red"
+msgstr "Rosso"
+
+msgctxt "#32591"
+msgid "Yellow"
+msgstr "Giallo"
+
+msgctxt "#32592"
+msgid "Deep Pink"
+msgstr "Rosa scuro"
+
+msgctxt "#32593"
+msgid "Cyan"
+msgstr "Ciano"
+
+msgctxt "#32594"
+msgid "Lawn Green"
+msgstr "Verde prato"
+
+msgctxt "#32595"
+msgid "Gold"
+msgstr "Oro"
+
+msgctxt "#32596"
+msgid "Magenta"
+msgstr "Magenta"
+
+msgctxt "#32597"
+msgid "Yellow Green"
+msgstr "Gialloverde"
+
+msgctxt "#32598"
+msgid "No Color"
+msgstr "Nessun colore"
+
+msgctxt "#32599"
+msgid "Getting genre information from Trakt"
+msgstr "Acquisisco informazioni sul genere da Trakt"
+
+msgctxt "#32600"
+msgid "Preparing sources"
+msgstr "Preparo fonti"
+
+msgctxt "#32601"
+msgid "Total"
+msgstr "Totale"
+
+msgctxt "#32602"
+msgid "Waiting for"
+msgstr "In attesa di"
+
+msgctxt "#32603"
+msgid "New search..."
+msgstr "Nuova ricerca..."
+
+msgctxt "#32604"
+msgid "[B]DOOFREE[/B] : Clear search history..."
+msgstr "[B]DOOFREE[/B] : Elimina cronologia ricerche..."
+
+msgctxt "#32605"
+msgid "Click to clear search history"
+msgstr "Clicca per eliminare la cronologia ricerche"
+
+msgctxt "#32606"
+msgid "Prem"
+msgstr "Premium"
+
+msgctxt "#32607"
+msgid "Normal"
+msgstr "Normale"
