added new sources

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,40 +1,2 @@
-[B]4.4.12[/B]
-- Combined sources
-
-[B]4.4.10[/B]
-- Hasthd + dl3 added
-
-[B]4.4.8[/B]
-- Hasthd + dl3 added
-
-[B]4.4.6[/B]
-- Mpie for series
-
-[B]4.4.5[/B]
-- Added indexer
-
-[B]4.4.2[/B]
-- Updated domains
-- Updated UrlResolver
-
-[B]4.4.1[/B]
-- Fixed Live tv
-- Fixed new search label
-
-[B]4.4.0[/B]
-- Changed crawler
-
-[B]4.3.5[/B]
-- Fixed Thai live tv
-
-[B]4.3.4[/B]
-- Temp redirect thai shows
-
-[B]4.3.3[/B]
-- Fixed thai shows
-
-[B]4.3.0[/B]
-- Fixed live stream
-
-[B]4.2.6[/B]
-- Fixed sources
+[B]4.5.0[/B]
+- Added more HD sources
